Mon Mar 30 13:52:31 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: rc files should be added before gtk_init

Mon Mar 30 10:46:29 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: add highligting to the skill label when take/drop

Sun Mar 29 21:25:51 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubgmodule.c: Avoid calling PythonNextTurn in PythonCommand, since
	PythonNextTurn always plays the next turn, and the command doesn't
	imply that.

Sun Mar 29 15:50:38 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* dice.c, dice.h, gnubg.c, play.c, rollout.c: fall back to mersenne
	twister if dice generator fails

Sat Mar 28 23:12:15 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, gnubg.c, gtkcube.c, gtkgame.c: minor fixes to
	hint/analysis of games with beavers: account for initial double
	in statistics, but not the following ones and show the take/beaver
	widget when applicable (i.e. not for raccoons).

Sat Mar 28 22:49:14 CET 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: fix to find the dice after updating the gamelist

Sat Mar 28 22:42:43 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c, show.c: fix tooltips for rngs and refactor the options
	page function

Sat Mar 28 22:30:41 CET 2009 Christian Anthon <anthon@kiku.dk>

	* m4/az_python.m4: detect python2.5 and python2.6

Sat Mar 28 22:16:21 CET 2009 Christian Anthon <anthon@kiku.dk>

	* commands.inc, gnubg.c: fix a few command help strings

Sat Mar 28 22:11:39 CET 2009 Christian Anthon <anthon@kiku.dk>

	* eval.c: delete a debug message and reformat a few things

Thu Mar 26 13:56:00 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: don't call update_move in board size allocation,
	leads to a hang.

Thu Mar 26 11:48:33 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, eval.c, play.c, sgf.c: make hint and cmark features work
	together and fix save match / hint bug report by Michel.

Wed Mar 25 22:30:30 CET 2009 Christian Anthon <anthon@kiku.dk>
