@@ -1,3 +1,8 @@
+Wed Apr  1 17:41:13 CEST 2009 Christian Anthon <anthon@kiku.dk>
+
+	* gtkoptions.c: display options was added twice and rng was update
+	even if unchanged 
+
 Mon Mar 30 13:52:31 CEST 2009 Christian Anthon <anthon@kiku.dk>
 
 	* gtkgame.c: rc files should be added before gtk_init
